для совместной работы

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h2 id="devise">SAVE THE DATE</h2>
       <div class="header-bottom-block">
-        <h1>ГРИГОРИЙ & НАТАЛЬЯ</h1>
+        <h1>ГРИГОРИЙ  &&nbsp;НАТАЛЬЯ</h1>
         <h2 id="date">09 / 08 / 2025</h2>
       </div>
     </header>
