mobile version final

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           будем искренне признательны за ваше поздравление в конверте. Для тех, кто желает 
           преподнести именной подарок, мы составили виш-лист с пожеланиями для нашего совместного будущего. 
           Для вашего удобства и чтобы избежать совпадений, а также сохранить элемент сюрприза, 
-          актуальный список подарков будет находиться у наших близких друзей: Анна +7 937 646 3339 Дмитрий +7 937 791 0321
+          актуальный список подарков будет находиться у наших близких друзей: <br>Анна +7 937 646 3339 <br>Дмитрий +7 937 791 0321
         </p>
         <h3>Творческие поздравления:</h3>
         <p>
@@ -140,12 +140,12 @@
     </section>
     <section class="ivitation">
       <div class="dirtyGreenBlock">
-        <h3>ПРИГЛАШЕНИЕ</h3>
+        <p>ПРИГЛАШЕНИЕ</p>
+        <h2>9 АВГУСТА</h2>
         <p class="green-shedule">— 15:30 — <br>фуршет</p>
         <p class="green-shedule">— 16:00 — <br>Выездная регистрация</p>
         <p class="green-shedule">— 17:00 — <br>Банкет</p>
         <p class="green-shedule">— 23:00 — <br>Окончание мероприятия</p>
-        <h2>9 АВГУСТА</h2>
       </div>
       <img src="pic10.jpg" alt="" id="pic10">
       <div class="invitationLastText">
