--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       </form>
       <img src="qr-cat.jpg" alt="" class="qr-cat">
       <p class="contacts">
-        Свяжитесь с нами по всем вопросам:
-        Наталья +79967469845
+        Свяжитесь с нами по всем вопросам: <br>
+        Наталья +79967469845 <br>
         Григорий +7 917 160 8515
       </p>
       <img src="pic13.jpg" alt="" id="pic13">
