--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/GN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wedding</title>
+    <base href="public/">
   </head>
   <body>
     <header>
