--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/style.css">
-    <link rel="icon" type="image/svg+xml" href="/GN.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/GN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wedding</title>
     <base href="public/">
@@ -32,8 +32,8 @@
           <li>Начало</li>
         </ul>
         <div class="firstPicBlock">
-          <img src="pic2.png" alt="" id="pic2">
-          <img src="pic3.jpg" alt="" id="pic3">
+          <img src="/images/pic2.png" alt="" id="pic2">
+          <img src="/images/pic3.jpg" alt="" id="pic3">
         </div>
       </div>
       <div class="secondIntroBlock">
@@ -49,8 +49,8 @@
           и поддержка наполнят этот день особым, неповторимым светом.
         </p>
         <div class="secondPicBlock">
-          <img src="pic4.jpg" alt="" id="pic4">
-          <img src="pic5.jpg" alt="" id="pic5">
+          <img src="/images/pic4.jpg" alt="" id="pic4">
+          <img src="/images/pic5.jpg" alt="" id="pic5">
         </div>
       </div>
     </section>
@@ -85,8 +85,8 @@
             Ваша элегантность станет неотъемлемой частью красоты этого вечера.
           </p>
           <div class="rulesPicBlock">
-            <img src="pic8.jpg" alt="" id="pic8">
-            <img src="pic9.jpg" alt="" id="pic9">
+            <img src="/images/pic8.jpg" alt="" id="pic8">
+            <img src="/images/pic9.jpg" alt="" id="pic9">
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           +7 927 265 5896 Роман
         </p>
       </div>
-            <img src="vetko.png" alt="ветка оливы" class="olive">
+            <img src="/images/vetko.png" alt="ветка оливы" class="olive">
     </section>
     <section class="details">
       <div class="shedule">
@@ -137,7 +137,7 @@
             Пожалуйста, дайте нам знать о вашем предполагаемом времени прибытия, чтобы мы могли все предусмотреть (контакты ниже).
           </p>
       </div>
-      <img src="vetko.png" alt="ветка оливы" class="olive" style= "transform: scaleX(-1)">
+      <img src="/images/vetko.png" alt="ветка оливы" class="olive" style= "transform: scaleX(-1)">
     </section>
     <section class="ivitation">
       <div class="dirtyGreenBlock">
@@ -148,7 +148,7 @@
         <p class="green-shedule">— 17:00 — <br>Банкет</p>
         <p class="green-shedule">— 23:00 — <br>Окончание мероприятия</p>
       </div>
-      <img src="pic10.jpg" alt="" id="pic10">
+      <img src="/images/pic10.jpg" alt="" id="pic10">
       <div class="invitationLastText">
         <p class="mainText">А теперь — сохраните это чувство светлого ожидания.</p>
         <p class="mainText">До встречи 9 августа в «Дубраве», где каждая деталь будет говорить о любви.</p>
@@ -157,12 +157,12 @@
         <h3>Григорий и Наталья</h3>
       </div>
       <div class="InvitationPicBlock">
-        <img src="pic11.jpg" alt="" id="pic11">
-        <img src="pic12.jpg" alt="" id="pic12">
+        <img src="/images/pic11.jpg" alt="" id="pic11">
+        <img src="/images/pic12.jpg" alt="" id="pic12">
       </div>
     </section>
     <footer>
-      <img src="GN-logo.png" alt="" id="gn-logo">
+      <img src="/images/GN-logo.png" alt="" id="gn-logo">
       <form action="">
         <input type="text" name="name" id="" placeholder="Ваше имя">
         <input type="text" name="telegram" id="" placeholder="Ваш телеграм">
@@ -170,7 +170,7 @@
         <input type="text" name="allergy" id="" placeholder="Есть ли у вас аллергия">
         <button type="submit">я приду!</button>
       </form>
-      <img src="qr-cat.jpg" alt="" class="qr-cat">
+      <img src="/images/qr-cat.jpg" alt="" class="qr-cat">
       <p class="contacts">
         Свяжитесь с нами по всем вопросам: <br>
         Наталья +79967469845 <br>
