--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/svg+xml" href="/images/GN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wedding</title>
-    <base href="public/">
   </head>
   <body>
     <header>
@@ -32,8 +31,8 @@
           <li>Начало</li>
         </ul>
         <div class="firstPicBlock">
-          <img src="/images/pic2.png" alt="" id="pic2">
-          <img src="/images/pic3.jpg" alt="" id="pic3">
+          <img src="./images/pic2.png" alt="" id="pic2">
+          <img src="./images/pic3.jpg" alt="" id="pic3">
         </div>
       </div>
       <div class="secondIntroBlock">
