pictures resized text changed

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <input type="text" name="telegram" id="" placeholder="Ваш телеграм">
         <input type="tel" name="telephone" id="" placeholder="Ваш телефон">
         <input type="text" name="allergy" id="" placeholder="Есть ли у вас аллергия">
-        <button type="submit">я приду!</button>
+        <button type="submit">Я приду!</button>
       </form>
       <img src="./images/qr-cat.jpg" alt="" class="qr-cat">
       <p class="contacts">
