--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="src/style.css">
     <link rel="icon" type="image/svg+xml" href="./images/GN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wedding</title>
+    <title>Куприяновы</title>
   </head>
   <body>
     <header>
