phone number edited

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <img src="./images/qr-cat.jpg" alt="" class="qr-cat">
       <p class="contacts">
         Свяжитесь с нами по всем вопросам: <br>
-        Наталья +79967469845 <br>
+        Наталья +7 996 746 9845 <br>
         Григорий +7 917 160 8515
       </p>
       <img src="./images/pic13.jpg" alt="" id="pic13">
